--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  flutter_pdfview: ^1.3.2
+  pdf: ^3.11.0
+  syncfusion_flutter_pdfviewer: ^26.2.5
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +43,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets\EES Company Profile..pdf
     - assets/placeholder.png
     - assets/factory icon.jpg
     - assets/splash.gif
