--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,15 @@ environment:
 dependencies:
   flutter: 
     sdk: flutter
+  cached_network_image: ^3.3.1
+  image_picker: ^1.1.2
+  video_player: ^2.9.1
   firebase_auth: ^5.1.2
   introduction_screen: ^3.0.0
+  flutter_downloader: ^1.11.8
+  path_provider: ^2.1.3
+  firebase_storage: ^12.1.1
+  flutter_local_notifications: ^17.2.1+2
   cloud_firestore: ^5.1.0
   provider: ^6.0.5
   flutter_hooks: ^0.20.5
@@ -23,6 +30,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  permission_handler: ^11.3.1
   flutter_pdfview: ^1.3.2
   pdf: ^3.11.0
   syncfusion_flutter_pdfviewer: ^26.2.5
@@ -37,7 +45,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/factory icon.jpg"
+  image_path: "assets/ShuwayerLogo.png"
 
 flutter:
   uses-material-design: true
@@ -45,8 +53,8 @@ flutter:
   assets:
     - assets\EES Company Profile..pdf
     - assets/placeholder.png
-    - assets/factory icon.jpg
-    - assets/splash.gif
+    - assets/ShuwayerLogo.png
+    - assets/Shuwayer.mp4
     - assets/about1.jpg
     - assets/about2.jpg
     - assets/about3.jpg
